--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<html>
+<!DOCTYPE html>
+<html lan="en">
 <head>
+	<meta charset="UTF-8">
+	<title>Javascript Examples</title>
 </head>
 <body>
-	<h1>Hello World!</h1>
+
+<script>
+ let numbers		= [1,2,3,4,4];
+ console.log( numbers );
+</script>
+
+
 </body>
 	</html>
